tests/tests_p1/pass/prof/25ok.min
program
	array v;
	array v2[3] := 1, 2, 3
start
	v # 100;
	v2 # 12;
end
