tests/tests_p1/fail/prof/11nocmp.min
program
	array v[3] := 1, 2, 3;
	string s := "hello"
start
	v = s!
end

